--- a/foodTracker/Base.lproj/Main.storyboard
+++ b/foodTracker/Base.lproj/Main.storyboard
@@ -55,6 +55,10 @@
                                     <constraint firstAttribute="trailing" secondItem="DEE-Gl-WXw" secondAttribute="trailing" id="T63-76-cCw"/>
                                 </constraints>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="keP-mm-hch" customClass="RatingControl" customModule="foodTracker" customModuleProvider="target">
+                                <rect key="frame" x="20" y="487" width="44" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
