kept on learning

--- a/foodTracker/Base.lproj/Main.storyboard
+++ b/foodTracker/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I1D-Qj-kV4">
-                                <rect key="frame" x="20" y="40" width="335" height="497.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I1D-Qj-kV4">
+                                <rect key="frame" x="20" y="40" width="335" height="491.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mhu-Gg-feK">
                                         <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
@@ -49,8 +49,13 @@
                                             <outletCollection property="gestureRecognizers" destination="SBH-Bj-a71" appends="YES" id="N0Y-gc-NHO"/>
                                         </connections>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="keP-mm-hch" customClass="RatingControl" customModule="foodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="447.5" width="50" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="keP-mm-hch" customClass="RatingControl" customModule="foodTracker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="447.5" width="252" height="44"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="starCount">
+                                                <integer key="value" value="0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </stackView>
                                 </subviews>
                                 <gestureRecognizers/>
